--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alkatra&display=swap" rel="stylesheet">
+
+    
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 class="heading">
+        <img class="logo" src="assets/images/logo.jpeg" alt="logo"> The Tracker
+    </h1>
+
+    <div class="balance-area">
+        <p class="results">Income <span id="income">0</span></p>
+        <p class="results">Expense <span id="expense">0</span></p>
+
+    </div>
+    <div class="transaction-area">
+
+    </div>
+
 
     <script src="assets/js/script.js"></script>
 </body>
